# Bakery-Website

./: CHANGELOG.txt  Makefile  README.md  main.py  openapi.yaml  pyproject.toml
backend/: README.md  bakery.db  openapi.yaml  pyproject.toml  requirements.txt  seed_admin.py
backend/app/: main.py  settings.py
backend/app/routes/: home.py  product_detail.py  products.py
backend/database/: compose.yaml  db.py  models.py  schemas.py
backend/src/app/: crud.py  main.py
backend/src/app/api/v1/: routes.py
backend/src/app/core/: auth.py  database.py  dependencies.py  settings.py
backend/src/app/models/: __init__.py  order.py  order_item.py  product.py  user.py
backend/src/app/repository/: order_repository.py  product_repository.py  user_repository.py
backend/src/app/routes/: order.py  product.py  user.py
backend/src/app/schemas/: order.py  order_item.py  product.py  user.py
backend/src/app/services/: order_service.py  product_service.py  user_service.py
backend/test/: test_crud.py  test_users.py
frontend/.Bakery_Website/: README.md  package-lock.json  package.json
frontend/.Bakery_Website/src/: index.css
frontend/.Bakery_Website/src/pages/: Home.tsx
