[project]
name = "bakery-backend"
version = "0.1.0"
description = "Backend for the Filipino Bakery"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.129.0",
    "pandas>=3.0.1",
    "pre-commit>=4.5.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.15.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.40.0",
]


[tool.setuptools.package-dir]
"" = "src"
